argocd/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend
spec:
  selector:
    app: backend
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  type: ClusterIP
