argocd/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: backend
  annotations:
    konghq.com/methods: "POST"
spec:
  ingressClassName: kong
  rules:
    - host: backend.example.com
      http:
        paths:
          - path: /api/v1/applications
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 3000
